; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_interrupt.c_IntPriorityGet.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_interrupt.c_IntPriorityGet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NUM_INTERRUPTS = common dso_local global i64 0, align 8
@g_pulRegs = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @IntPriorityGet(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp uge i64 %3, 4
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @NUM_INTERRUPTS, align 8
  %8 = icmp ult i64 %6, %7
  br label %9

9:                                                ; preds = %5, %1
  %10 = phi i1 [ false, %1 ], [ %8, %5 ]
  %11 = zext i1 %10 to i32
  %12 = call i32 @ASSERT(i32 %11)
  %13 = load i32*, i32** @g_pulRegs, align 8
  %14 = load i64, i64* %2, align 8
  %15 = lshr i64 %14, 2
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @HWREG(i32 %17)
  %19 = load i64, i64* %2, align 8
  %20 = and i64 %19, 3
  %21 = mul i64 8, %20
  %22 = trunc i64 %21 to i32
  %23 = ashr i32 %18, %22
  %24 = and i32 %23, 255
  %25 = sext i32 %24 to i64
  ret i64 %25
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @HWREG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
